fix(css): correct the browser's text-wrapping behavior
By default, the browser will not break a long text like URLs, causing an overflowing text or adjust the wrapping position to avoid too few words in the last line of a text block

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,3 +4,23 @@
   --color-off-black: #111111; /* https://www.linkedin.com/pulse/say-goodbye-pure-black-white-ui-design-mohammad-mosharrof-hossain */
   --color-off-white: #e8e8e8; /* https://tangledweb.xyz/good-article-and-important-f251b70545de */
 }
+
+/* CSS Resest */
+@layer base {
+  /* https://www.joshwcomeau.com/css/custom-css-reset/ */
+  address,
+  figcaption,
+  p {
+    overflow-wrap: break-word; /* Wrap long text like URLs */
+    text-wrap: pretty; /* Avoid orphans (ie. one word in the last line of a paragraph) */
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    overflow-wrap: break-word; /* Wrap long text like URLs */
+    text-wrap: balance; /* Avoid two few words in the last line of a heading: see https://css-tricks.com/almanac/properties/t/text-wrap-style/ */
+  }
+}
